<resources>
    <string name="app_name">Shopping App</string>
    <string name="ultimate_destination">Your Ultimate Destination for Exquisite Jewelry</string>
    <string name="discover_the_elegance">Discover the elegance and timeless beauty of amber jewelry with Amber Boutique.</string>
    <string name="shop_with_confidence">Shop with confidence and find the perfect addition to your collection today.</string>
    <string name="amber_boutique">Amber Boutique</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="create_account">Create\nAccount</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="get_started">Let\'s get started</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="search_now">Search Now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="decrease_the_quantity">Decrease the quantity</string>
    <string name="buy">BUY</string>
    <string name="total_price">Total price</string>
</resources>